[gd_scene load_steps=10 format=3 uid="uid://ciol4b2addxhs"]

[ext_resource type="Script" path="res://scripts/Sun.gd" id="1_e1lq8"]
[ext_resource type="Texture2D" uid="uid://dqy3uyoopv5lr" path="res://assets/sun_body.png" id="2_35wqw"]
[ext_resource type="Texture2D" uid="uid://ddyout3ocvd1r" path="res://assets/sun_halo.png" id="3_wwngj"]
[ext_resource type="Texture2D" uid="uid://be7f25jo1583g" path="res://assets/warning-28-xxl.png" id="4_3htb4"]
[ext_resource type="AudioStream" uid="uid://jm5c8xsyqmwq" path="res://assets/ring_game_segment_alarm.wav" id="5_aohj8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ij06p"]
radius = 182.0

[sub_resource type="Animation" id="Animation_pfrhr"]
resource_name = "arrival"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Warning:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Alarm:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.04, 0.04), Vector2(0.13, 0.13)]
}

[sub_resource type="Animation" id="Animation_whf03"]
resource_name = "departure"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sw16j"]
_data = {
"arrival": SubResource("Animation_pfrhr"),
"departure": SubResource("Animation_whf03")
}

[node name="Sun" type="Area2D"]
modulate = Color(0, 0, 0, 0)
z_index = 2
collision_layer = 0
collision_mask = 2
script = ExtResource("1_e1lq8")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(1, 3)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_35wqw")

[node name="Halo" type="Sprite2D" parent="Body"]
z_index = -1
texture = ExtResource("3_wwngj")

[node name="Warning" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, -155)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4_3htb4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ij06p")

[node name="Decay" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sw16j")
}

[node name="Alarm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aohj8")
volume_db = -9.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Decay" to="." method="_on_decay_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
